@@ -12,6 +12,7 @@
   * Added a clock offset parameter to the cable model (lsl.common.stations.Cable)
   * Cleaned up the correlateTBW.py scripts
   * Fixed a bug in the correlator integer sample delays
+  * Fixed bugs in the lsl.misc.beamformer module related to delays
 
 0.5.1
   * Added jinja2 to the list of install dependencies
